@@ -21,7 +21,7 @@ select
       and p_partkey = l_partkey
       and o_orderkey = l_orderkey
       and s_nationkey = n_nationkey
-      and p_name like '%[COLOR]%'
+      and p_name like 'green'
   ) as profit
 group by 
   nation,
